website 2.0 en ramados

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    
+    <header>
+        <img src="./img/856132136070515.61f2b84600d07.jpg" alt="dillom">
+        <h1>GIT</h1>
+    </header>
+<nav>
+    <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href=""></a>lugar</li>
+        <li><a href=""></a>lugar</li>
+        <li><a href=""></a>lugar</li>
+        <li><a href=""></a>lugar</li>
+    </ul>
+</nav>
+<main>
+<!--contenido principal-->
+<section>
+    <article>
+        <h2>Titulo</h2>
+        <img src="./img/856132136070515.61f2b84600d07.jpg" alt="dillom-2">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi molestiae nisi beatae vitae numquam laboriosam repudiandae sed ut atque nulla velit eaque, minima voluptatum voluptatem cupiditate tempora autem qui earum.</p>
+    </article>
+</section>
+</main>
+    <footer>
+        <p>desarrollado por "Emanuel valdomir"</p>
+    </footer>
 </body>
 </html>
