--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
     <header>
-        <img src="./img/856132136070515.61f2b84600d07.jpg" alt="dillom">
         <h1>GIT</h1>
     </header>
 <nav>
     <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href=""></a>lugar</li>
-        <li><a href=""></a>lugar</li>
-        <li><a href=""></a>lugar</li>
-        <li><a href=""></a>lugar</li>
+        <li><a href="https://www.google.com">lugar</a></li>
+        <li><a href="https://www.google.com">lugar</a></li>
+        <li><a href="https://www.google.com">lugar</a></li>
+        <li><a href="https://www.google.com">lugar</a></li>
     </ul>
 </nav>
 <main>
@@ -26,7 +25,7 @@
 <section>
     <article>
         <h2>Titulo</h2>
-        <img src="./img/856132136070515.61f2b84600d07.jpg" alt="dillom-2">
+        <img class="imgarticle" src="./img/856132136070515.61f2b84600d07.jpg" alt="dillom-2">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi molestiae nisi beatae vitae numquam laboriosam repudiandae sed ut atque nulla velit eaque, minima voluptatum voluptatem cupiditate tempora autem qui earum.</p>
     </article>
 </section>
